Fixed wrong padding for top-bar

--- a/src/ui/components/top-bar/top-bar.css
+++ b/src/ui/components/top-bar/top-bar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 8px;
+  padding: 8px 16px;
 
   border-bottom: 1px solid var(--figma-color-border);
 }
